# lccc

./: .gitattributes  .gitignore  BENCHMARK_ANALYSIS.md  Cargo.toml  FINAL_RESULTS.md  GITHUB_ACTIONS_FIX.md  Gemfile  LICENSE-APACHE  LICENSE-BSD  LICENSING.md  NEXT_STEPS.md  NEXT_STEPS_ASSESSMENT.md  PHASE_7A_COMPLETE.md  PHASE_7B_SUMMARY.md  PHASE_9_SUMMARY.md  README.md  STATE_ASSESSMENT.md  VECTORIZATION_COMPLETE.md  VECTORIZATION_SUCCESS.md  _config.yml  index.html  results.md
.github/scripts/: ci-bench.py
.github/workflows/: bench.yml  ci.yml  pages.yml
_layouts/: doc.html  home.html
assets/css/: style.css
docs/: PHASE9B_SUMMARY.md  architecture.md  benchmarks.md  getting-started.md  licensing.md  optimization-passes.md  phase9b_implementation_notes.md  register-allocator.md  roadmap.md
docs/_posts/: 2026-03-20-phase-6-sse2-vectorization.md  2026-03-20-phase-7b-remainder-loops.md  2026-03-27-phase-14-sqlite-works.md
lccc-improvements/benchmarks/: BENCHMARK_RESULTS.md  BENCHMARK_RESULTS_V2.md  README.md  bench.py
lccc-improvements/register-allocation/: BASELINE_ANALYSIS.md  CURRENT_ALLOCATOR_ANALYSIS.md  INTEGRATION_POINTS.md  LINEAR_SCAN_DESIGN.md  PHASE_1_IMPLEMENTATION_PLAN.md  README.md  WEEK_1_COMPLETION_REPORT.md
src/backend/: common.rs  generation.rs  live_range.rs  liveness.rs  mod.rs  regalloc.rs  state.rs  (+2 more)
tests/: compat_test.sh  fib_rec2iter.c  simple_loop.c  simple_loop_univsr.s  test_ivsr_indexed.c  test_ivsr_indexed_before.s  verify_fib_perf.sh
updates/: phase3-tce-and-phi-coalescing.md  phase4-loop-unrolling.md  phase5-fp-peephole.md
(+89 files in other folders)
