[package]
name = "lccc"

[lib]
name = "lccc"
path = "src/lib.rs"
version = "0.1.0"
edition = "2021"
description = "LCCC (Lev's C Compiler) — a high-performance C compiler fork targeting x86-64, i686, ARM64, and RISC-V"
autobins = false

[[bin]]
name = "lccc"
path = "src/main.rs"

[[bin]]
name = "lccc-x86"
path = "src/bin/ccc_x86.rs"

[[bin]]
name = "lccc-arm"
path = "src/bin/ccc_arm.rs"

[[bin]]
name = "lccc-riscv"
path = "src/bin/ccc_riscv.rs"

[[bin]]
name = "lccc-i686"
path = "src/bin/ccc_i686.rs"

[features]
# Allow GCC as a linker fallback. When enabled and GCC is used, a warning is printed.
gcc_linker = []
# Allow GCC as an assembler fallback. When enabled and GCC is used, a warning is printed.
gcc_assembler = []
# Allow GCC passthrough for -m16 mode (16-bit real-mode boot code).
# When enabled and GCC is used, a prominent warning is printed.
gcc_m16 = []
